--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <p>First paragraph</p>
     <p>Second paragraph</p>
     <p>Master paragraph - thrid one</p>
+    <p>Fourth paragraph</p>
 </body>
 </html>
