--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Zadanie 1</title>
 </head>
 <body>
-    <p>Moje portfolio</p>
+    <p>Zadanie 1</p>
 </body>
 </html>
