--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <form action="" method="">
+    <form action="https://formspree.io/pavv.dev@gmail.com" method="POST">
         <label for="name">Imię</label>
         <input type="text" id="name" name="name"> <br>
 
