--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="name" name="name"> <br>
 
         <label for="surname">Nazwisko</label>
-        <input type="text" id="surname" name="surame"> <br>
+        <input type="text" id="surname" name="surname"> <br>
 
         <label for="mail">Email</label>
         <input type="text" id="mail" name="mail"> <br>
@@ -21,10 +21,9 @@
         <label for="phone">Numer telefonu</label>
         <input type="number" id="phone" name="phone"> <br>
 
-        <textarea name="text_box" id="" cols="40" rows="5"></textarea> <br>
+        <textarea name="text_box" id="" cols="40" rows="5">Hello!</textarea> <br>
 
         <input type="submit" value="Wyślij">
-
     </form>
 
 </body>
