phone_type_change

--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -19,7 +19,7 @@
         <input type="text" id="mail" name="mail"> <br>
 
         <label for="phone">Numer telefonu</label>
-        <input type="number" id="phone" name="phone"> <br>
+        <input type="tel" id="phone" name="phone"> <br>
 
         <textarea name="text_box" id="" cols="40" rows="5">Hello!</textarea> <br>
 
