Label+default_for_text_box

--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -20,8 +20,9 @@
 
         <label for="phone">Numer telefonu</label>
         <input type="tel" id="phone" name="phone"> <br>
-
-        <textarea name="text_box" id="" cols="40" rows="5">Hello!</textarea> <br>
+        
+        <label for="text_box">Wiadomość</label> <br>
+        <textarea name="text_box" id="" cols="40" rows="5" value="Hello!"></textarea> <br>
 
         <input type="submit" value="Wyślij">
     </form>
