--- a/Zadania-domowe/Zadanie-1/index.html
+++ b/Zadania-domowe/Zadanie-1/index.html
@@ -21,8 +21,8 @@
         <label for="phone">Numer telefonu</label>
         <input type="tel" id="phone" name="phone"> <br>
         
-        <label for="text_box">Wiadomość</label> <br>
-        <textarea name="text_box" id="" cols="40" rows="5" value="Hello!"></textarea> <br>
+        <label for="txtbox">Wiadomość</label> <br>
+        <textarea name="text_box" id="txtbox" cols="40" rows="5" value="Hello!"></textarea> <br>
 
         <input type="submit" value="Wyślij">
     </form>
