--- a/Zadania-domowe/Zadanie-2/index.html
+++ b/Zadania-domowe/Zadanie-2/index.html
@@ -27,8 +27,8 @@
           <option value="Warszawa">Warszawa</option>
         </select> <br>
 
-        <input type="radio" name="sex" id="male"><label for="male">Mężczyzna</label>
-        <input type="radio" name="sex" id="female"><label for="female">Kobieta</label> <br>
+        <input type="radio" name="gender" id="male"><label for="male">Mężczyzna</label>
+        <input type="radio" name="gender" id="female"><label for="female">Kobieta</label> <br>
 
         <input type="checkbox" id="consent" name="consent"><label for="consent">Zgoda na przetwarzanie danych osobowych</label> <br>
 
