--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <link href='http://fonts.googleapis.com/css?family=Lato|Roboto&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <!--    <link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,latin-ext' rel='stylesheet' type='text/css'>-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -109,12 +109,20 @@
             </address>
 
             <div id="footer-icons">
-                <div class="icon">
+                <div class="social-icon">
                     <i class="fa fa-twitter-square" aria-hidden="true"></i>
                 </div>
-                <div class="icon"></div>
-                <div class="icon"></div>
-                <div class="icon"></div>
+                <div class="social-icon">
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                </div>
+                    
+                <div class="social-icon">
+                    <i class="fa fa-google-plus-official" aria-hidden="true"></i>
+                </div>
+                    
+                <div class="social-icon">
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i> 
+                </div>
             </div>
         </div>
 
