--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -40,9 +40,14 @@
     <section>
         <h3 id="about" class="headers">O <span>mnie</span></h3>
         <div id="about-me-section">
+<!--
             <div id="photo" class="floated">
                 <img src="img/jan-nowak.jpg" alt="janek" align="right">
             </div>
+-->
+            <figure id="photo" class="floated">
+                <img src="img/jan-nowak.jpg" alt="janek" align="right">
+            </figure>
             <div id="about-txt" class="floated">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis earum commodi, id deserunt tenetur dolores voluptatem temporibus nemo, nam sint voluptates facilis soluta impedit in consequuntur officiis. Minima, sunt soluta. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident delectus quibusdam quasi blanditiis praesentium, non esse cupiditate maiores. Provident delectus velit odit libero numquam soluta, debitis natus amet minima corporis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi asperiores odit aliquam dignissimos ipsa, praesentium ratione soluta deserunt, placeat vero nesciunt molestias animi voluptatum quia vitae hic sapiente ea excepturi.
             </div>
@@ -56,6 +61,7 @@
         <h3 id="skills" class="headers">Moje <span>umiejętności</span></h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde beatae esse voluptatem sint optio voluptas harum aperiam aut, fuga in illo doloremque laboriosam a quos error sit ad magni tempore.</p>
         <div id="icon-set">
+<!--
             <div class="icon">
                 <img src="icons/css3.png" alt="css3">
                 <figcaption>CSS3</figcaption>
@@ -72,6 +78,23 @@
                 <img src="icons/js.png" alt="js">
                 <figcaption>Javascript</figcaption>
             </div>
+-->
+            <figure class="icon">
+                <img src="icons/css3.png" alt="css3">
+                <figcaption>CSS3</figcaption>
+            </figure>
+            <figure class="icon">
+                <img src="icons/html5.png" alt="html">
+                <figcaption>HTML 5</figcaption>
+            </figure>
+            <figure class="icon">
+                <img src="icons/jquery.png" alt="jquery">
+                <figcaption>JQuery</figcaption>
+            </figure>
+            <figure class="icon">
+                <img src="icons/js.png" alt="js">
+                <figcaption>Javascript</figcaption>
+            </figure>
         </div>
     </section>
 
@@ -80,6 +103,7 @@
     <section>
         <h3 id="portfolio" class="headers">Moje <span>portfolio</span></h3>
         <div id="portfolio-set">
+<!--
             <div class="portfolio-tile">
                 <img src="img/portfolio1.jpg" alt="portfolio1">
             </div>
@@ -89,6 +113,16 @@
             <div class="portfolio-tile">
                 <img src="img/portfolio3.jpg" alt="portfolio3">
             </div>
+-->
+            <figure class="portfolio-tile">
+                <img src="img/portfolio1.jpg" alt="portfolio1">
+            </figure>
+            <figure class="portfolio-tile">
+                <img src="img/portfolio2.jpg" alt="portfolio2">
+            </figure>
+            <figure class="portfolio-tile">
+                <img src="img/portfolio3.jpg" alt="portfolio3">
+            </figure>
         </div>
     </section>
 
@@ -112,6 +146,7 @@
                 <div class="social-icon">
                     <i class="fa fa-twitter-square" aria-hidden="true"></i>
                 </div>
+                
                 <div class="social-icon">
                     <i class="fa fa-facebook-square" aria-hidden="true"></i>
                 </div>
