--- a/Zadania-domowe/Zadanie-5_Product_List/index.html
+++ b/Zadania-domowe/Zadanie-5_Product_List/index.html
@@ -16,7 +16,7 @@
     
     <div id="outer-container">
         
-        <div class="container first-container background1">
+        <div class="container background1">
             <div class="bottom">
                 <i class="fa fa-shopping-cart fa-4x" aria-hidden="true"></i>
             </div>
