--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,7 +19,12 @@
 <body>
 
     <!--  Header & nav -->
+
     <nav id="navigation">
+        <!--  Menu icon -->
+        <label for=responsive-menu>Menu</label>
+        <input type="checkbox" id="responsive-menu">
+        
         <ul>
             <li class="menu-item"><a href="#about">O mnie</a></li>
             <li class="menu-item"><a href="#skills">Umiejętności</a></li>
@@ -90,7 +95,9 @@
 
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML5, CSS3, Bootstrap, JavaScript, JQuery</p>
-                            <i class="fa fa-database fa-3x" aria-hidden="true"></i>
+                            <a href="" class="portfolio-link">
+                                <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +112,9 @@
 
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML5, CSS3, Bootstrap, JavaScript, JQuery</p>
-                            <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                            <a href="" class="portfolio-link">
+                                <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -120,7 +129,9 @@
 
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML5, CSS3, Bootstrap, JavaScript, JQuery</p>
-                            <i class="fa fa-empire fa-3x" aria-hidden="true"></i>
+                            <a href="" class="portfolio-link">
+                                <i class="fa fa-link fa-3x" aria-hidden="true"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -144,28 +155,28 @@
                e-mail: <a href="mailto:pavv.dev@gmail.com">pavv.dev@gmail.com</a></mail>
             </address>
 
-            <div id="footer-icons">
+            <div id="footer-icon-set">
                 <div class="social-icon">
                     <a href="https://twitter.com/">
-                        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                 </div>
 
                 <div class="social-icon">
                     <a href="https://www.facebook.com">
-                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </div>
 
                 <div class="social-icon">
                     <a href="https://plus.google.com">
-                        <i class="fa fa-google-plus-official" aria-hidden="true"></i>
+                        <i class="fa fa-google-plus" aria-hidden="true"></i>
                     </a>
                 </div>
 
                 <div class="social-icon">
                     <a href="https://www.linkedin.com">
-                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
@@ -183,10 +194,12 @@
                 <input id="sumbit" type="submit" value="Wyślij">
             </form>
         </div>
+
+        <!--       Footer margin -->
+        <div id="footer-bottom-margin">Copyright © Paweł Zasada </div>
     </footer>
 
-    <!--       Footer margin -->
-    <div id="footer-margin">Copyright © Paweł Zasada </div>
+
 </body>
 
 </html>
