--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -71,7 +71,7 @@
             </figure>
             <figure class="icon">
                 <img src="icons/jquery.png" alt="jquery">
-                <figcaption>JQuery</figcaption>
+                <figcaption>jQuery</figcaption>
             </figure>
             <figure class="icon">
                 <img src="icons/js.png" alt="js">
