--- a/Zadania-domowe/Zadanie-6_Get data with AJAX/index.html
+++ b/Zadania-domowe/Zadanie-6_Get data with AJAX/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
    
-   <button id="btn">Get data!</button>
+    <button id="btn">Get data!</button>
+    <div id="dev-data"></div>
 
     <script src="js/main.js"></script>
 </body>
