--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400|Roboto:100,300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Lato:400,700,700i" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
