--- a/Zadania-domowe/Zadanie-7_Bootstrap portfolio/index.html
+++ b/Zadania-domowe/Zadanie-7_Bootstrap portfolio/index.html
@@ -257,6 +257,8 @@
 
 
     <script src="js/jquery-3.2.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
